--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: Erase your IL juvenile record
+title: Erase your CT juvenile record
 ---
 
 <h1>
   Erase your Illinois juvenile record!
 </h1>
 <p>
-  If you were arrested in IL when you were under 18, you probably have a juvenile record.
+  If you were arrested in CT when you were under 18, you probably have a juvenile record.
 </p>
 <p>
   A juvenile record does not go away on its own, and you're better off without one. The good news: most juvenile records can be erased through a process called juvenile expungement.
@@ -29,7 +29,7 @@ title: Erase your IL juvenile record
 
 <p class="small">
   *Disclaimer: This site isn't a substitute for legal aid.
-  If you have any questions, you can <a href="{{ site.baseurl }}/legalaid">speak with a lawyer</a> (for free!). By using expunge.io, you agree to the
+  If you have any questions, you can <a href="{{ site.baseurl }}/legalaid">speak with a lawyer</a> (for free!). By using this site, you agree to the
   <button class="btn-link" data-toggle="modal" data-target="#privacy-policy">
     privacy policy
   </button> and
@@ -60,7 +60,7 @@ title: Erase your IL juvenile record
         <h4 class="modal-title" id="myModalLabel">Privacy Policy</h4>
       </div>
       <div class="modal-body">
-        By using this website, www.expunge.io, (the “Web Site”) you acknowledge and agree to this Privacy Policy. The Web Site was created by Cathy Deng and is operated and run by LAF (formerly, the Legal Assistance Foundation of Metropolitan Chicago), the Mikva Juvenile Justice Council and Smart Chicago (collectively, the Affiliates” and/or “we”).
+        By using this website, www.newdomaingoeshere.org, (the “Web Site”) you acknowledge and agree to this Privacy Policy. The Web Site was created by Cathy Deng and is operated and run by LAF (formerly, the Legal Assistance Foundation of Metropolitan Chicago), the Mikva Juvenile Justice Council and Smart Chicago (collectively, the Affiliates” and/or “we”).
 
         <h4>1. SCOPE</h4>
         This privacy statement applies to this Web Site, which collects data about any juvenile criminal record you may have to determine whether or not you may be able to expunge that record from all relevant public files.
