--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Erase your CT juvenile record
 ---
 
 <h1>
-  Erase your Illinois juvenile record!
+  Erase your Connecticut juvenile record!
 </h1>
 <p>
   If you were arrested in CT when you were under 18, you probably have a juvenile record.
@@ -191,7 +191,7 @@ title: Erase your CT juvenile record
         <h4>8. MISCELLANEOUS</h4>
 
         Both you and the Affiliates acknowledge and agree that no partnership is formed and neither of you nor the Affiliates has the power or the authority to obligate or bind the other.
-        These Terms will be governed by and construed in accordance with the internal laws of the State of Illinois without regard to conflicts of laws principles. Each party hereby waives any rights they may have to a trial by jury.  With respect to any dispute arising from these Terms of Use, each party irrevocably consents to the exclusive jurisdiction and venue of the state and federal courts located in Cook County, Illinois, with precedence being given to said federal courts if the requisite subject matter jurisdiction should exist. Any cause of action you may have with respect to the Web Site must be commenced within six (6) months after the claim or cause of action arises or else such claim or cause of action is barred. These Terms operate to the fullest extent permissible by law.<br><br>
+        These Terms will be governed by and construed in accordance with the internal laws of the State of Connecticut without regard to conflicts of laws principles. Each party hereby waives any rights they may have to a trial by jury.  With respect to any dispute arising from these Terms of Use, each party irrevocably consents to the exclusive jurisdiction and venue of the state and federal courts located in Cook County, Connecticut, with precedence being given to said federal courts if the requisite subject matter jurisdiction should exist. Any cause of action you may have with respect to the Web Site must be commenced within six (6) months after the claim or cause of action arises or else such claim or cause of action is barred. These Terms operate to the fullest extent permissible by law.<br><br>
 
         On certain areas of the Web Site, you may be given the ability to provide us with personally identifiable information. Please read our Privacy Policy for more information about our information collection and use practices.<br><br>
 
