--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: Erase your IL juvenile record
+title: Erase your CT juvenile record
 ---
 
 <h1>
-  Erase your Illinois juvenile record!
+  Erase your Connecticut juvenile record!
 </h1>
 <p>
-  If you were arrested in IL when you were under 18, you probably have a juvenile record.
+  If you were arrested in CT when you were under 18, you probably have a juvenile record.
 </p>
 <p>
   A juvenile record does not go away on its own, and you're better off without one. The good news: most juvenile records can be erased through a process called juvenile expungement.
@@ -29,7 +29,7 @@ title: Erase your IL juvenile record
 
 <p class="small">
   *Disclaimer: This site isn't a substitute for legal aid.
-  If you have any questions, you can <a href="{{ site.baseurl }}/legalaid">speak with a lawyer</a> (for free!). By using expunge.io, you agree to the
+  If you have any questions, you can <a href="{{ site.baseurl }}/legalaid">speak with a lawyer</a> (for free!). By using this site, you agree to the
   <button class="btn-link" data-toggle="modal" data-target="#privacy-policy">
     privacy policy
   </button> and
@@ -60,7 +60,7 @@ title: Erase your IL juvenile record
         <h4 class="modal-title" id="myModalLabel">Privacy Policy</h4>
       </div>
       <div class="modal-body">
-        By using this website, www.expunge.io, (the “Web Site”) you acknowledge and agree to this Privacy Policy. The Web Site was created by Cathy Deng and is operated and run by LAF (formerly, the Legal Assistance Foundation of Metropolitan Chicago), the Mikva Juvenile Justice Council and Smart Chicago (collectively, the Affiliates” and/or “we”).
+        By using this website, www.newdomaingoeshere.org, (the “Web Site”) you acknowledge and agree to this Privacy Policy. The Web Site was created by Cathy Deng and is operated and run by LAF (formerly, the Legal Assistance Foundation of Metropolitan Chicago), the Mikva Juvenile Justice Council and Smart Chicago (collectively, the Affiliates” and/or “we”).
 
         <h4>1. SCOPE</h4>
         This privacy statement applies to this Web Site, which collects data about any juvenile criminal record you may have to determine whether or not you may be able to expunge that record from all relevant public files.
@@ -191,7 +191,7 @@ title: Erase your IL juvenile record
         <h4>8. MISCELLANEOUS</h4>
 
         Both you and the Affiliates acknowledge and agree that no partnership is formed and neither of you nor the Affiliates has the power or the authority to obligate or bind the other.
-        These Terms will be governed by and construed in accordance with the internal laws of the State of Illinois without regard to conflicts of laws principles. Each party hereby waives any rights they may have to a trial by jury.  With respect to any dispute arising from these Terms of Use, each party irrevocably consents to the exclusive jurisdiction and venue of the state and federal courts located in Cook County, Illinois, with precedence being given to said federal courts if the requisite subject matter jurisdiction should exist. Any cause of action you may have with respect to the Web Site must be commenced within six (6) months after the claim or cause of action arises or else such claim or cause of action is barred. These Terms operate to the fullest extent permissible by law.<br><br>
+        These Terms will be governed by and construed in accordance with the internal laws of the State of Connecticut without regard to conflicts of laws principles. Each party hereby waives any rights they may have to a trial by jury.  With respect to any dispute arising from these Terms of Use, each party irrevocably consents to the exclusive jurisdiction and venue of the state and federal courts located in Cook County, Connecticut, with precedence being given to said federal courts if the requisite subject matter jurisdiction should exist. Any cause of action you may have with respect to the Web Site must be commenced within six (6) months after the claim or cause of action arises or else such claim or cause of action is barred. These Terms operate to the fullest extent permissible by law.<br><br>
 
         On certain areas of the Web Site, you may be given the ability to provide us with personally identifiable information. Please read our Privacy Policy for more information about our information collection and use practices.<br><br>
 
