--- a/es/index.html
+++ b/es/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page_es
-title: Erase your IL juvenile record
+title: Erase your CT juvenile record
 ---
 
 <h1>
-  Bienvenido a "Expunge.io" para Illinois 
+  Bienvenido a "Expunge" para Connecticut 
 </h1>
 <p>
   Si fuiste arrestado a los 17 años o menos,es probable que tengas un registro de antecedentes penales de menores - estos registros no desaparecen por sí solos.
