--- a/legalaid.html
+++ b/legalaid.html
@@ -4,16 +4,16 @@ title: Free Legal Aid for Juvenile Expungement
 ---
 
 <div class="page-header">
-  <h2>Legal Aid</h2>
+  <h2>Legal Aid in Connecticut</h2>
 </div>
 
 <div class="row">
   <div class="col-sm-8">
     <h3>
-      For free legal help, call the <a href="https://www.facebook.com/JuvenileExpungementHelpDesk">Juvenile Expungement Help Desk</a>!
+      For free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid office near you</a>!
     </h3>
     <h3>
-      <i class="fa fa-phone fa-fw"></i>(312) 229-6359
+      <i class="fa fa-phone fa-fw"></i>(203) 000-0000
     </h3>
     <br>
   </div>
