--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
 layout: page
-title: Erase your CT juvenile record
+title: Erase your Connecticut juvenile record!
 ---
 
 <h1>
   Erase your Connecticut juvenile record!
 </h1>
 <p>
-  If you were arrested in CT when you were under 18, you probably have a juvenile record.
+If you were arrested in CT when you were under 18, you probably have a juvenile record.
 </p>
 <p>
-  A juvenile record does not go away on its own, and you're better off without one. The good news: most juvenile records can be erased through a process called juvenile expungement.
+A juvenile record does not go away on its own. You are better off without one because having a record can make it hard to get a job, get into college or the military and even to rent an apartment.  The good news: most juvenile records can be erased.
 </p>
 
 <a href="{{ site.baseurl }}/questions/agearrested.html" class="btn btn-lg btn-warning">Find out if you're eligible!*</a>
@@ -18,17 +18,17 @@ title: Erase your CT juvenile record
 <br><br>
 
 <h2>
-  Applying for juvenile expungement
+  Applying for juvenile erasure
 </h2>
 <p>
-  There are attorneys who can help you get all your information together, for free!
+  There are attorneys who can help you get your record erased, for free!
 </p>
 <a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a><br><br>
 
 <br/><br/>
 
 <p class="small">
-  *Disclaimer: This site isn't a substitute for legal aid.
+  *Disclaimer..... This site isn't a substitute for legal aid.
   If you have any questions, you can <a href="{{ site.baseurl }}/legalaid">speak with a lawyer</a> (for free!). By using this site, you agree to the
   <button class="btn-link" data-toggle="modal" data-target="#privacy-policy">
     privacy policy
