--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<h2>Based on your answers, you were arrested as a juvenile. It's likely that you'll be eligible to expunge your record!</h2>
+<h2>Based on your answers, you were arrested as a juvenile.  It’s likely that you’ll be eligible to erase your record!</h2>
 <br>
 
 
@@ -27,7 +27,7 @@ layout: page
  })(document, 'script');</script>
 
 <p>
-  After you submit this form, a lawyer from LAF Chicago will attempt to contact you at the phone number you provided. They will try to help you confirm that you are eligible for juvenile expungement, and then they will help you navigate the rest of the petitioning process!
+  After you submit this form, a case manager from the WorkPlace, Face Forward  program will try to contact you at the phone number you provided. They will help you confirm that you are eligible for juvenile expungement, and then they will refer you to a lawyer at Connecticut Legal Services for help petitioning to erase your juvenile record.
 </p>
 
 <a href="{{ site.baseurl }}/applying.html" class="btn btn-success">
