--- a/questions/agearrested.html
+++ b/questions/agearrested.html
@@ -4,7 +4,7 @@ layout: question
 question: How old were you when you were arrested?
 
 ans1_val: 17 & under
-ans1_next: results/juvrecord
+ans1_next: questions/agenow
 
 ans2_val: 18 & over
 ans2_next: results/notjuv
