--- a/questions/yearsdischarged.html
+++ b/questions/yearsdischarged.html
@@ -7,7 +7,7 @@ ans1_val: Yes
 ans1_next: results/juvrecord
 
 ans2_val: No
-ans2_next: results/notjuv
+ans2_next: results/juvwaitperiod
 
 notsure_option: True
 ---
