--- a/questions/agenow.html
+++ b/questions/agenow.html
@@ -7,7 +7,7 @@ ans1_val: 17 & under
 ans1_next: results/juvrecord
 
 ans2_val: 18 & over
-ans2_next: results/maybejuv
+ans2_next: questions/yearsdischarged
 
 notsure_option: True
 ---
