--- a/results/juvwaitperiod.html
+++ b/results/juvwaitperiod.html
@@ -5,13 +5,13 @@ layout: page
 <h2>Based on your answers, you were arrested as a juvenile.</h2>
 <p>However, you cannot apply to erase your juvenile record until at least 2 years (or 4 years for a serious juvenile offense) have passed from the date the court, or any other agency or institution the court sent you to, discharged you.</p>
 
-<br></br>
+<p>&nbsp;</p>
 
 
 <p>
 	You may not have to wait 2 years (or 4 years for a serious juvenile offense) to petition for erasure of your juvenile record if, for example, you have had trouble getting a job, into college, housing, or the military because of your record.
 </p>
 
-<br></br>
+<p>&nbsp;</p>
 
 <a href="{{ site.baseurl }}/applying.html" class="btn btn-success">Learn more about how to petition for erasure</a>
