--- a/results/juvwaitperiod.html
+++ b/results/juvwaitperiod.html
@@ -3,6 +3,9 @@ layout: page
 ---
 
 <h2>Based on your answers, you were arrested as a juvenile.</h2>
+
+<p>&nbsp;</p>
+
 <p>However, you cannot apply to erase your juvenile record until at least 2 years (or 4 years for a serious juvenile offense) have passed from the date the court, or any other agency or institution the court sent you to, discharged you.</p>
 
 <p>&nbsp;</p>
