--- a/results/juvwaitperiod.html
+++ b/results/juvwaitperiod.html
@@ -17,4 +17,4 @@ layout: page
 
 <p>&nbsp;</p>
 
-<a href="{{ site.baseurl }}/applying.html" class="btn btn-success">Learn more about how to petition for erasure</a>
+<a href="{{ site.baseurl }}/results/applypetition.html" class="btn btn-success">Learn more about how to petition for erasure</a>
