--- a/questions/agenow.html
+++ b/questions/agenow.html
@@ -4,7 +4,7 @@ layout: question
 question: How old are you now?
 
 ans1_val: 17 & under
-ans1_next: results/juvrecord
+ans1_next: results/juvapply18
 
 ans2_val: 18 & over
 ans2_next: questions/yearsdischarged
