--- a/results/notjuv.html
+++ b/results/notjuv.html
@@ -2,11 +2,13 @@
 layout: page
 ---
 
-<h3>Based on your answers, you have an <i>adult</i> record. You may be eligible for a pardon – more information here:</h3>
+<h3>Based on your answers, you have an <i>adult</i> record. However, you may be eligible for a pardon</h3>
+<br>
+<h4>Here are some resources to assist you with the pardon process:</h4>
 <br>
 <br>
 	<ul>
-		<li><a href="http://ctlawhelp.org/criminal-record-keeping-you-from-working">Read this to see if you are eligible for a pardon</a></li>
-		<li><a href="http://ctlawhelp.org/get-help">Apply here to get help with your pardon application</a></li>
-		<li><a href="http://ct.gov/bopp">Download a pardon application</a></li>
+		<li><a href="http://ctlawhelp.org/criminal-record-keeping-you-from-working">Read this to see if you are eligible for a pardon</a></li><br>
+		<li><a href="http://ctlawhelp.org/get-help">Apply here to get help with your pardon application</a></li><br>
+		<li><a href="http://ct.gov/bopp">Download a pardon application</a></li><br>
 	</ul>
