--- a/results/notsure.html
+++ b/results/notsure.html
@@ -3,25 +3,30 @@ layout: page
 ---
 
 <h3>
-	Contact the <a href="https://www.facebook.com/JuvenileExpungementHelpDesk">Juvenile Expungement Help Desk</a> at (312) 229-6359 and a lawyer will be be able to look up your record & help you - for free!
+	Based on your answers, it’s unclear if you were arrested as a juvenile or as an adult.
 </h3>
-
-<br>
-<h3>To get information about an arrest in Chicago (date, age, juvenile vs. adult), you can get your arrest record (aka rap sheet) at:</h3>
-<p>
-Records and Services Division of the Chicago Police Department<br>
-3510 S Michigan, Chicago IL 60653<br>
-(312)745-5508<br>
-Mon-Fri 8am-12pm</p>
-<br>
-
-
-<br>
 
 <div class="well well-sm">
 <p>
-	<h4>If you were arrested outside Chicago & outside Cook County</h4>
-	search for your zip code <a href="http://www.illinoislegalaid.org/index.cfm?fuseaction=home.dsp_content&contentID=7064#a=legalhelp">here</a> and contact the appropriate legal aid organization in Illinois
-
+You will need to ask the juvenile court if you have a juvenile record.  Make a request for your juvenile record, in writing, to the Clerk, Juvenile Court in the court nearest to where you were arrested. 
 </p>
 </div>
+
+<br>
+<p>
+Juvenile Matters at Bridgeport<br>
+60 Housatonic Avenue, Bridgeport 06604<br>
+Tel: (203) 579-6544<br>
+<br>
+Juvenile Matters at Stamford<br>
+123 Hoyt Street, 5th Floor, Stamford 06905<br>
+(203) 965-5708<br>
+<br>
+Juvenile Matters at Waterbury<br>
+7 Kendrick Avenue, Waterbury 06702<br>
+(203) 596-4202<br>
+</p>
+<br>
+<h2>OR</h2>
+<br>
+<p>Check with the police department closest to where you were arrested.  There will be a small fee to get your police record.</p>
