--- a/applying.html
+++ b/applying.html
@@ -1,43 +1,32 @@
 ---
 layout: page
-title: How to apply for expungement
+title: WorkPlace Face Forward Program
 ---
 
-<div class="page-header">
-  <h2>Applying for expungement</h2>
-</div>
 
-<h3>
-  1. Pick up your arrest record, <i>for free</i>, in person at:
-</h3>
 <p>
-<a href="https://www.facebook.com/JuvenileExpungementHelpDesk" target = "_blank">Juvenile Expungement Help Desk</a> at Cook County Juvenile Center<br>
-<i class="fa fa-map-marker fa-fw"></i> <a href="https://www.google.com/maps/dir/''/1100+S+Hamilton+Ave,+Chicago,+IL+60612/data=!4m5!4m4!1m0!1m2!1m1!1s0x880e2d6da3d88edb:0x96bb1955978d2f7f?sa=X&ved=0ahUKEwiKpfefy_bKAhXI6iYKHdhIANoQwwUIJTAB" target="_blank">1100 S Hamilton Ave, Chicago, IL 60612</a><br>
-<i class="fa fa-phone fa-fw"></i> (312) 229-6359<br>
-<i class="fa fa-clock-o fa-fw"></i> Mon/Tues/Fri: 9am-4pm, Wed/Thurs: 9am-12pm<br>
-</p>
-<p>
-  <i class="fa fa-car fa-fw"></i> Parking available adjacent to the courthouse ($2.00)
+  If you are between 18 & 24 and live in one of the towns listed below you can get free help erasing your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </p>
 
-<h3>
-  2. Complete Paperwork
-</h3>
-
-<p>
-  You'll need to submit <a href="http://www.illinois.gov/osad/Expungement/Instructions_Forms/Documents/Forms_/ExpungementJuvOption1Form.pdf" target="blank">some forms</a> to the court Clerk's office in the county where your arrest happened:
-  <ol>
-    <li>a Petition to Expunge Juvenile Arrest Record</li>
-    <li>a Notice</li>
-    <li>an Order of Expungement</li>
-  </ol>
-</p>
-<p>
-  The attorneys at the <a href="https://www.facebook.com/JuvenileExpungementHelpDesk" target = "_blank">juvenile expungement help desk</a> can help you fill out and submit your paperwork, for free.
-</p><br><br>
-
-<div class="well well-sm">
-  <p class="h3">
-     If you have any questions, don't hesitate to call free legal help at (312) 229-6359
-  </p>
-</div>
+ <ul style="list-style-type:none">
+<li>Ansonia</li>
+<li>Beacon Falls</li>
+<li>Bridgeport</li>
+<li>Darien</li>
+<li>Derby</li>
+<li>Easton</li>
+<li>Fairfield</li>
+<li>Greenwich</li>
+<li>Monroe</li>
+<li>New Canaan</li>
+<li>Norwalk</li>
+<li>Oxford</li>
+<li>Seymour</li>
+<li>Shelton</li>
+<li>Stamford</li>
+<li>Stratford</li>
+<li>Trumbull</li>
+<li>Weston</li>
+<li>Westport</li>
+<li>Wilton</li>
+</ul> 
