--- a/applying.html
+++ b/applying.html
@@ -30,3 +30,9 @@ title: WorkPlace Face Forward Program
 <li>Westport</li>
 <li>Wilton</li>
 </ul> 
+
+<br>
+<p>
+There are many more free Face Forward services
+<a href="{{ site.baseurl }}/services.html" class="btn btn-default">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
+</p>
