--- a/services.html
+++ b/services.html
@@ -55,5 +55,5 @@ Face Forward 3 Services Include:
 
 <br>
 <p>
-<i class="fa fa-phone fa-fw"></i>&nbsp;Call (203) 489-5048 for additional information.
+<i class="fa fa-phone fa-fw"></i>&nbsp;Call (203) 489-5048 for additional information
 </p>
