--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -37,3 +37,6 @@ layout: page
 <p>google form</p>
 <br>
 <iframe src="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+[gdoc link="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform" height="800"]
+
