--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -38,7 +38,10 @@ layout: page
 <br>
 <iframe src="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-[gdoc link="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform" height="800"]
+<p>another version</p>
+<iframe width="760" height="800" src="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform?embedded=true" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+
+
 
 https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform
 
