--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -38,10 +38,25 @@ layout: page
 <br>
 <iframe src="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-<p>another version</p>
-<iframe width="760" height="800" src="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform?embedded=true" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+<p>new wufoo</p>
 
-
-
-https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform
-
+<div id="wufoo-zw3j0vr1rkrzdh">
+Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/partners/">Wufoo integrations</a> and get your data to your favorite apps.</div>
+<script type="text/javascript">var zw3j0vr1rkrzdh;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'erasurect',
+'formHash':'zw3j0vr1rkrzdh',
+'autoResize':true,
+'height':'545',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { zw3j0vr1rkrzdh = new WufooForm();zw3j0vr1rkrzdh.initialize(options);zw3j0vr1rkrzdh.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
