--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -34,16 +34,12 @@ layout: page
   Learn more about how to apply for expungement
 </a>
 
-<p>google form</p>
-<br>
-<iframe src="https://docs.google.com/forms/d/1ce25uTF3t74by_-ilrnv60djXfnn7r_Xd0CFtxQMTQ8/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-<p>new wufoo</p>
+<h2>new wufoo</h2>
 
 <div id="wufoo-zw3j0vr1rkrzdh">
 Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
 </div>
-<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/partners/">Wufoo integrations</a> and get your data to your favorite apps.</div>
 <script type="text/javascript">var zw3j0vr1rkrzdh;(function(d, t) {
 var s = d.createElement(t), options = {
 'userName':'erasurect',
