--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ If you were arrested in CT when you were under 18, you probably have a juvenile 
 A juvenile record does not go away on its own. You are better off without one because having a record can make it hard to get a job, get into college or the military and even to rent an apartment.  The good news: most juvenile records can be erased.
 </p>
 
-<a href="{{ site.baseurl }}/questions/agearrested.html" class="btn btn-lg btn-warning">Find out if you're eligible!*</a>
+<a href="{{ site.baseurl }}/disclaimer.html" class="btn btn-lg btn-warning">Find out if you're eligible!*</a>
 
 <br><br>
 
