--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -32,5 +32,5 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 </p>
 
 <a href="{{ site.baseurl }}/applying.html" class="btn btn-success">
-  Learn more about how to apply for expungement
+  Learn more about how to apply for erasure
 </a>
