--- a/index.html
+++ b/index.html
@@ -27,20 +27,9 @@ A juvenile record does not go away on its own. You are better off without one be
 
 <br/><br/>
 
-<p class="small">
-  *Disclaimer..... This site isn't a substitute for legal aid.
-  If you have any questions, you can <a href="{{ site.baseurl }}/legalaid">speak with a lawyer</a> (for free!). By using this site, you agree to the
-  <button class="btn-link" data-toggle="modal" data-target="#privacy-policy">
-    privacy policy
-  </button> and
-  <button class="btn-link" data-toggle="modal" data-target="#terms-of-use">
-    terms of use
-  </button>.
-</p>
-
 <hr/>
 <p>
-    Know someone with a juvenile record? Help out by sharing expunge.io!&nbsp;&nbsp;&nbsp;
+    Know someone with a juvenile record? Help out by sharing erasure!&nbsp;&nbsp;&nbsp;
     <a href="https://twitter.com/intent/tweet?text=If%20you%20have%20a%20juvenile%20record%2C%20you%20may%20be%20able%20to%20expunge%20it.%20Check%20out%20%23expungeio!&amp;tw_p=tweetbutton&amp;url=http%3A%2F%2Fexpunge.io">
     	<i class="fa fa-twitter"></i>
     </a>
