--- a/disclaimer.html
+++ b/disclaimer.html
@@ -91,7 +91,7 @@ title: Disclaimer
         We reserve the right to change the terms of this Privacy Policy at any time. Please check back periodically for any changes to our Privacy Policy. If we decide to change our data collection and use practices, we will first publish a new policy on this Web page before modifying our practices. YOUR ONLY NOTICE OF CHANGES IN OUR DATA COLLECTION AND USE PRACTICES WILL BE BY READING THIS PRIVACY POLICY. Your continued use of the Web Site constitutes your agreement to any such changes. 
 
         <h4>11. HOW TO CONTACT US</h4>
-        If you have any questions or concerns regarding the Web Site, please contact info@smartchicagocollaborative.org . 
+        If you have any questions or concerns regarding the Web Site, please contact Connecticut Legal Services, Inc. 
 
       </div>
       <div class="modal-footer">
@@ -159,7 +159,7 @@ title: Disclaimer
         <h4>8. MISCELLANEOUS</h4>
 
         Both you and the Affiliates acknowledge and agree that no partnership is formed and neither of you nor the Affiliates has the power or the authority to obligate or bind the other.
-        These Terms will be governed by and construed in accordance with the internal laws of the State of Illinois without regard to conflicts of laws principles. Each party hereby waives any rights they may have to a trial by jury.  With respect to any dispute arising from these Terms of Use, each party irrevocably consents to the exclusive jurisdiction and venue of the state and federal courts located in Connecticut, with precedence being given to said federal courts if the requisite subject matter jurisdiction should exist. Any cause of action you may have with respect to the Web Site must be commenced within six (6) months after the claim or cause of action arises or else such claim or cause of action is barred. These Terms operate to the fullest extent permissible by law.<br><br>
+        These Terms will be governed by and construed in accordance with the internal laws of the State of Connecticut without regard to conflicts of laws principles. Each party hereby waives any rights they may have to a trial by jury.  With respect to any dispute arising from these Terms of Use, each party irrevocably consents to the exclusive jurisdiction and venue of the state and federal courts located in Connecticut, with precedence being given to said federal courts if the requisite subject matter jurisdiction should exist. Any cause of action you may have with respect to the Web Site must be commenced within six (6) months after the claim or cause of action arises or else such claim or cause of action is barred. These Terms operate to the fullest extent permissible by law.<br><br>
 
         On certain areas of the Web Site, you may be given the ability to provide us with personally identifiable information. Please read our Privacy Policy for more information about our information collection and use practices.<br><br>
 
