--- a/questions/yearsdischarged.html
+++ b/questions/yearsdischarged.html
@@ -3,10 +3,10 @@ layout: question
 
 question: Has it been at least 2 years (4 years if convicted of a serious juvenile offense) since you completed what the court ordered you to do as a result of your conviction?
 
-ans1_val: Yes
+ans1_val: 'Yes'
 ans1_next: results/juvrecord
 
-ans2_val: No
+ans2_val: -No-
 ans2_next: results/juvwaitperiod
 
 notsure_option: True
