--- a/questions/yearsdischarged.html
+++ b/questions/yearsdischarged.html
@@ -6,7 +6,7 @@ question: Has it been at least 2 years (4 years if convicted of a serious juveni
 ans1_val: 'Yes'
 ans1_next: results/juvrecord
 
-ans2_val: -No-
+ans2_val: 'No'
 ans2_next: results/juvwaitperiod
 
 notsure_option: True
