--- a/legalaid.html
+++ b/legalaid.html
@@ -1,36 +1,30 @@
 ---
 layout: page
-title: Free Legal Aid for Juvenile Expungement
+title: Free Legal Aid for Juvenile Erasure
 ---
 
 <div class="page-header">
   <h2>Legal Aid in Connecticut</h2>
 </div>
 
+<br><br><br>
 <div class="row">
   <div class="col-sm-8">
     <h3>
-      For free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid office near you</a>!
+      For other free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid office near you</a>!
     </h3>
     <h3>
-      <i class="fa fa-phone fa-fw"></i>(203) 000-0000
+      <i class="fa fa-phone fa-fw"></i>(203) 336-3851
     </h3>
     <br>
   </div>
 <!--   <div class="col-sm-3">
-    <div id="camille" style="background: transparent url('{{ site.baseurl }}/images/camille.jpg') 0 0 no-repeat;"></div>
-    <br>
-  </div>
-  <div class="col-sm-3">
-    <p>Camille works at the <a href="https://www.facebook.com/JuvenileExpungementHelpDesk">Juvenile Expungement Help Desk</a>. This is a free service & the lawyers are eager to help you!</p>
   </div> -->
 </div>
 
-<br><br><br>
-
-<div class="well">
+<!--div class="well">
 <p style="margin: 0 0 0 0">
   If you were arrested outside of Cook County: search for your zip code <a href="http://www.illinoislegalaid.org/index.cfm?fuseaction=home.dsp_content&contentID=7064#a=legalhelp">here</a> to find a free legal aid organization in your area.
 
 </p>
-</div>
+</div -->
