--- a/legalaid.html
+++ b/legalaid.html
@@ -7,12 +7,13 @@ title: Free Legal Aid for Juvenile Erasure
   <h2>Legal Aid in Connecticut</h2>
 </div>
 
-<br><br><br>
+<br><br>
 <div class="row">
   <div class="col-sm-8">
     <h3>
-      For other free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid office near you</a>!
+      For other free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid office near you</a>
     </h3>
+    <br>
     <h3>
       <i class="fa fa-phone fa-fw"></i>(203) 336-3851
     </h3>
