--- a/legalaid.html
+++ b/legalaid.html
@@ -11,7 +11,7 @@ title: Free Legal Aid for Juvenile Erasure
 <div class="row">
   <div class="col-sm-8">
     <h3>
-      For other free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid office near you</a>
+      For other free legal help, call the <a href="http://ctlawhelp.org/general-legal-services-map">Legal Aid</a> office near you
     </h3>
     <br>
     <h3>
