--- a/applying.html
+++ b/applying.html
@@ -1,18 +1,18 @@
 ---
 layout: page
-title: WorkPlace Face Forward Program
+title: Free Legal Help
 ---
 
 
 <h3>
-  If you are between 18 & 24 and live in one of the towns listed below you can get free help erasing your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
+  If you are between 18 & 24 and live in one of the towns listed below you can get free help making sure your juvenile record is not revealed by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </h3>
 
- <ul style="list-style-type:none">
-<li>Ansonia</li>
-<li>Beacon Falls</li>
-<li>Bridgeport</li>
-<li>Darien</li>
+<ul>
+<li>Ansonia   Beacon Falls   Bridgeport   Darien</li>
+<li></li>
+<li></li>
+<li></li>
 <li>Derby</li>
 <li>Easton</li>
 <li>Fairfield</li>
