--- a/applying.html
+++ b/applying.html
@@ -8,7 +8,8 @@ title: Free Legal Help
   If you are between 18 & 24 and live in one of the towns listed below you can get free help making sure your juvenile record is not revealed by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </h3>
 
- <ul>
+<div id="section">
+<ul>
 <li>Ansonia&nbsp;&nbsp;&nbsp;Beacon&nbsp;&nbsp;&nbsp;Falls&nbsp;&nbsp;&nbsp;Bridgeport&nbsp;&nbsp;&nbsp;Darien&nbsp;&nbsp;&nbsp;Derby&nbsp;&nbsp;&nbsp;Easton</li>
 <li></li>
 <li></li>
@@ -17,12 +18,15 @@ title: Free Legal Help
 <li></li>
 <li>Fairfield</li>
 <li>Greenwich</li>
+</div>
+<div id="section2">
 <li>Monroe</li>
 <li>New Canaan</li>
 <li>Norwalk</li>
 <li>Oxford</li>
 <li>Seymour</li>
 <li>Shelton</li>
+</div>
 <li>Stamford</li>
 <li>Stratford</li>
 <li>Trumbull</li>
