--- a/applying.html
+++ b/applying.html
@@ -35,6 +35,27 @@ title: Free Legal Help
 <li>Wilton</li>
 </ul> 
 
+
+
+<div class="container-fluid fill">
+    <div class="row-fluid">
+        <div class="fixed">  <!-- we want this div to be fixed width -->
+            <li>Monroe</li>
+<li>New Canaan</li>
+<li>Norwalk</li>
+<li>Oxford</li>
+        </div>
+        <div class="hero-unit filler">  <!-- we have removed spanX class -->
+            ...<li>Monroe</li>
+<li>New Canaan</li>
+<li>Norwalk</li>
+<li>Oxford</li>
+        </div>
+    </div>
+</div>
+
+
+
 <br>
 <p>
 There are many more free Face Forward services
