--- a/applying.html
+++ b/applying.html
@@ -37,22 +37,18 @@ title: Free Legal Help
 
 
 
-<div class="container-fluid fill">
-    <div class="row-fluid">
-        <div class="fixed">  <!-- we want this div to be fixed width -->
-            <li>Monroe</li>
-<li>New Canaan</li>
-<li>Norwalk</li>
-<li>Oxford</li>
-        </div>
-        <div class="hero-unit filler">  <!-- we have removed spanX class -->
-            ...<li>Monroe</li>
-<li>New Canaan</li>
-<li>Norwalk</li>
-<li>Oxford</li>
-        </div>
-    </div>
-</div>
+<table>
+  <tr>
+    <td>Monroe</td>
+    <td>Monroe2</td>
+    <td>Monroe3</td>
+  </tr>
+  <tr>
+    <td>Monroe</td>
+    <td>Monroe2</td>
+    <td>Monroe3</td>
+  </tr>
+</table>
 
 
 
