--- a/applying.html
+++ b/applying.html
@@ -10,7 +10,7 @@ title: Free Legal Help
 
 <section>
 <ul>
-<li>Ansonia&nbsp;&nbsp;&nbsp;Beacon&nbsp;&nbsp;&nbsp;Falls&nbsp;&nbsp;&nbsp;Bridgeport&nbsp;&nbsp;&nbsp;Darien&nbsp;&nbsp;&nbsp;Derby&nbsp;&nbsp;&nbsp;Easton</li>
+<pre></pre><li>Ansonia   Beacon   Falls   Bridgeport   Darien   Derby   Easton</li></pre>
 <li></li>
 <li></li>
 <li></li>
