--- a/applying.html
+++ b/applying.html
@@ -10,7 +10,7 @@ title: Free Legal Help
 
 <section>
 <ul>
-<pre></pre><li>Ansonia   Beacon   Falls   Bridgeport   Darien   Derby   Easton</li></pre>
+<pre><li>Ansonia   Beacon   Falls   Bridgeport   Darien   Derby   Easton</li></pre>
 <li></li>
 <li></li>
 <li></li>
