--- a/applying.html
+++ b/applying.html
@@ -11,6 +11,8 @@ title: Free Legal Help
 <section>
 <ul>
 <pre><li>Ansonia   Beacon   Falls   Bridgeport   Darien   Derby   Easton</li></pre>
+<pre>Ansonia Beacon Falls Bridgeport Darien Derby Easton</pre>
+<pre>Ansonia Beacon Falls Bridgeport Darien Derby Easton</pre>
 <li></li>
 <li></li>
 <li></li>
