--- a/applying.html
+++ b/applying.html
@@ -56,9 +56,9 @@ title: Free Legal Help
 
 <style> 
 .newspaper {
-    -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
-    -moz-columns: 100px 3; /* Firefox */
-    columns: 100px 3;
+    -webkit-columns: 10px 3; /* Chrome, Safari, Opera */
+    -moz-columns: 10px 3; /* Firefox */
+    columns: 10px 3;
 }
 </style>
 
@@ -66,8 +66,14 @@ title: Free Legal Help
 <p><strong>Note:</strong> The columns property is not supported in Internet Explorer 9 and earlier versions.</p>
 
 <div class="newspaper">
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
+Ansonia Norwalk Beacon Falls Oxford
+Bridgeport			Seymour
+Darien				Shelton
+Derby				Stamford
+Easton				Stratford
+Fairfield			Trumbull
+Greenwich			Weston
+Monroe Westport New Canaan Wilton
 </div>
 
 
