--- a/applying.html
+++ b/applying.html
@@ -66,8 +66,7 @@ title: Free Legal Help
 <p><strong>Note:</strong> The columns property is not supported in Internet Explorer 9 and earlier versions.</p>
 
 <div class="newspaper">
-Ansonia Norwalk Beacon Falls Oxford
-Bridgeport			Seymour
+Ansonia<br>Norwalk<br>Beacon<br>Falls<br>Oxford<br>Bridgeport<br>Seymour
 Darien				Shelton
 Derby				Stamford
 Easton				Stratford
