--- a/applying.html
+++ b/applying.html
@@ -55,24 +55,18 @@ title: Free Legal Help
 
 
 <style> 
-.newspaper {
-    -webkit-columns: 10px 3; /* Chrome, Safari, Opera */
-    -moz-columns: 10px 3; /* Firefox */
-    columns: 10px 3;
+.columntown {
+    -webkit-columns: 3; /* Chrome, Safari, Opera */
+    -moz-columns: 3; /* Firefox */
+    columns: 3;
 }
 </style>
 
 
 <p><strong>Note:</strong> The columns property is not supported in Internet Explorer 9 and earlier versions.</p>
 
-<div class="newspaper">
-Ansonia<br>Norwalk<br>Beacon<br>Falls<br>Oxford<br>Bridgeport<br>Seymour
-Darien				Shelton
-Derby				Stamford
-Easton				Stratford
-Fairfield			Trumbull
-Greenwich			Weston
-Monroe Westport New Canaan Wilton
+<div class="columntown">
+Ansonia<br>Norwalk<br>Beacon&nbsp;Falls<br>Oxford<br>Bridgeport<br>Seymour<br>Darien<br>Shelton<br>Derby<br>Stamford<br>Easton<br>Stratford<br>Fairfield<br>Trumbull<br>Greenwich<br>Weston<br>Monroe<br>Westport<br>New&nbsp;Canaan<br>Wilton
 </div>
 
 
