--- a/applying.html
+++ b/applying.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Free Legal Help
+title: Free Legal Help & Information on Applying
 ---
 
 
@@ -8,65 +8,36 @@ title: Free Legal Help
   If you are between 18 & 24 and live in one of the towns listed below you can get free help making sure your juvenile record is not revealed by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </h3>
 
-<section>
-<ul>
-<pre><li>Ansonia   Beacon   Falls   Bridgeport   Darien   Derby   Easton</li></pre>
-<pre>Ansonia    Beacon    Falls    Bridgeport    Darien   Derby   Easton</pre>
-<pre>Ansonia Beacon Falls Bridgeport Darien Derby Easton</pre>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li>Fairfield</li>
-<li>Greenwich</li>
-</section>
-<section>
-<li>Monroe</li>
-<li>New Canaan</li>
-<li>Norwalk</li>
-<li>Oxford</li>
-<li>Seymour</li>
-<li>Shelton</li>
-</section>
-<li>Stamford</li>
-<li>Stratford</li>
-<li>Trumbull</li>
-<li>Weston</li>
-<li>Westport</li>
-<li>Wilton</li>
-</ul> 
-
-
-
-<table>
-  <tr>
-    <td>Monroe</td>
-    <td>Monroe2</td>
-    <td>Monroe3</td>
-  </tr>
-  <tr>
-    <td>Monroe</td>
-    <td>Monroe2</td>
-    <td>Monroe3</td>
-  </tr>
-</table>
-
-
 
 <style> 
-.columntown {
+.column {
     -webkit-columns: 3; /* Chrome, Safari, Opera */
     -moz-columns: 3; /* Firefox */
     columns: 3;
 }
 </style>
 
-
-<p><strong>Note:</strong> The columns property is not supported in Internet Explorer 9 and earlier versions.</p>
-
-<div class="columntown">
-Ansonia<br>Norwalk<br>Beacon&nbsp;Falls<br>Oxford<br>Bridgeport<br>Seymour<br>Darien<br>Shelton<br>Derby<br>Stamford<br>Easton<br>Stratford<br>Fairfield<br>Trumbull<br>Greenwich<br>Weston<br>Monroe<br>Westport<br>New&nbsp;Canaan<br>Wilton
+<div class="column">
+Ansonia<br>
+Beacon Falls<br>
+Bridgeport<br>
+Darien<br>
+Derby<br>
+Easton<br>
+Fairfield<br>
+Greenwich<br>
+Monroe<br>
+New Canaan<br>
+Norwalk<br>
+Oxford<br>
+Seymour<br>
+Shelton<br>
+Stamford<br>
+Stratford<br>
+Trumbull<br>
+Weston<br>
+Westport<br>
+Wilton
 </div>
 
 
