--- a/applying.html
+++ b/applying.html
@@ -4,10 +4,11 @@ title: Free Legal Help & Information on Applying
 ---
 
 
-<h3>
+<p>
   If you are between 18 & 24 and live in one of the towns listed below you can get free help making sure your juvenile record is not revealed by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
-</h3>
+</p>
 
+<br><br>
 
 <style> 
 .column {
@@ -42,8 +43,8 @@ Wilton
 
 
 
-<br>
+<br><br>
 <p>
 There are many more free Face Forward services
 </p>
-<a href="{{ site.baseurl }}/services.html" class="btn btn-default">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
+<a href="{{ site.baseurl }}/services.html" class="btn btn-warning">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
