--- a/applying.html
+++ b/applying.html
@@ -47,4 +47,4 @@ Wilton
 <p>
 There are many more free Face Forward services
 </p>
-<a href="{{ site.baseurl }}/services.html" class="btn btn-warning">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
+<a href="{{ site.baseurl }}/services.html" class="btn btn-primary">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
