--- a/applying.html
+++ b/applying.html
@@ -3,7 +3,7 @@ layout: page
 title: Free Legal Help & Information on Applying
 ---
 
-
+<br><br>
 <p>
   If you are between 18 & 24 and live in one of the towns listed below you can get free help making sure your juvenile record is not revealed by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </p>
@@ -47,4 +47,4 @@ Wilton
 <p>
 There are many more free Face Forward services
 </p>
-<a href="{{ site.baseurl }}/services.html" class="btn btn-primary">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
+<a href="{{ site.baseurl }}/services.html" class="btn btn-default">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
