--- a/services.html
+++ b/services.html
@@ -12,30 +12,41 @@ Face Forward Program
 Face Forward 3 offers free employment and training services (including erasure of juvenile records) for youth who have been involved with the juvenile justice system, are between 14 and 24 and live in the following towns:
 </p>
 
-<ul style="list-style-type:none">
-<li>Ansonia</li>
-<li>Beacon Falls</li>
-<li>Bridgeport</li>
-<li>Darien</li>
-<li>Derby</li>
-<li>Easton</li>
-<li>Fairfield</li>
-<li>Greenwich</li>
-<li>Monroe</li>
-<li>New Canaan</li>
-<li>Norwalk</li>
-<li>Oxford</li>
-<li>Seymour</li>
-<li>Shelton</li>
-<li>Stamford</li>
-<li>Stratford</li>
-<li>Trumbull</li>
-<li>Weston</li>
-<li>Westport</li>
-<li>Wilton</li>
-</ul> 
+<br>
+
+<style> 
+.column {
+    -webkit-columns: 3; /* Chrome, Safari, Opera */
+    -moz-columns: 3; /* Firefox */
+    columns: 3;
+}
+</style>
+
+<div class="column">
+Ansonia<br>
+Beacon Falls<br>
+Bridgeport<br>
+Darien<br>
+Derby<br>
+Easton<br>
+Fairfield<br>
+Greenwich<br>
+Monroe<br>
+New Canaan<br>
+Norwalk<br>
+Oxford<br>
+Seymour<br>
+Shelton<br>
+Stamford<br>
+Stratford<br>
+Trumbull<br>
+Weston<br>
+Westport<br>
+Wilton
+</div> 
 
 <br>
+
 <h3>
 Face Forward 3 Services Include:
 </h3>
