--- a/questions/agearrested.html
+++ b/questions/agearrested.html
@@ -8,7 +8,7 @@ ans1_next: questions/agenow
 
 ans2_val: 18 & over
 ans2_next: results/notjuv
-ans2_color: danger
+ans2_color: sucess
 
 notsure_option: True
 ---
