--- a/about.html
+++ b/about.html
@@ -4,19 +4,19 @@ title: About
 ---
 
 <h2>About</h2>
-
+<br>
 <p>
   This is a resource for people with juvenile records in Connecticut.
 </p>
-
+<br>
 <p>
-  A juvenile record can be a barrier to employment, education, and housing. Luckily, juvenile records can be erased through the erasure process. However, while the majority of juvenile records can be erased, few people know about or take advantage of the opportunity. This website seeks to clarify juvenile expungement, with the hope of more people getting their records erased!
+  A juvenile record can be a barrier to employment, education, and housing. Luckily, juvenile records can be erased through the erasure process. However, while the majority of juvenile records can be erased, few people know about or take advantage of the opportunity. This website seeks to clarify juvenile erasure, with the hope of more people getting their records erased!
 </p>
 <br><hr>
 
 <div class="small">
   <p>
-    This site was adapated from an original project called "Expunge.io" which was designed and developed by <a href="https://twitter.com/cthydng">Cathy Deng</a>, with help from others.
+    This site was adapated from an original project, "<a href="http://www.expunge.io/"></a>Expunge.io</a>", which was designed and developed by <a href="https://twitter.com/cthydng">Cathy Deng</a>, with help from others.
   </p>
 
   <!-- p>
