--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,8 +5,8 @@ title: Disclaimer
 
 <h2>DISCLAIMER</h2>
 <p>
-  This site <i><b>does not serve as a substitute for legal aid</b></i>.
-  If you're unsure about any questions, you can speak with a lawyer (for free!) by clicking <a href="{{ site.baseurl }}/legalaid">Legal Aid</a>.
+  This site <i><b>does not substitute for legal aid</b></i>.
+  <a href="{{ site.baseurl }}/applying">Find out</a> how you may be able to get free help from a lawyer.
 </p>
 
 <p>
@@ -180,4 +180,4 @@ title: Disclaimer
 </div>
 
 
-<a href="{{ site.baseurl }}/questions/agearrested.html" class="btn btn-success">OK, I understand. Let's get started!</a>
+<a href="{{ site.baseurl }}/questions/agearrested.html" class="btn btn-warning">OK, I understand. Let's get started!</a>
