--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,7 +6,7 @@ title: Disclaimer
 <h2>DISCLAIMER</h2>
 <p>
   This site <i><b>does not substitute for legal aid</b></i>.
-  <a href="{{ site.baseurl }}/applying">Find out</a> how you may be able to get free help from a lawyer.
+  <b></b><a href="{{ site.baseurl }}/applying">Find out</a></b> how you may be able to get free help from a lawyer.
 </p>
 
 <p>
