--- a/applying.html
+++ b/applying.html
@@ -41,7 +41,12 @@ Westport<br>
 Wilton
 </div>
 
-<br><br>
+<br>
+
+<p>
+  OR fill out the form below
+</p>
+<br>
 
 <div id="wufoo-zw3j0vr1rkrzdh">
 Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
