--- a/applying.html
+++ b/applying.html
@@ -41,11 +41,11 @@ Westport<br>
 Wilton
 </div>
 
-<br>
+<br><br>
 
-<p>
-  OR fill out the form below
-</p>
+<p><i>
+  Or fill out the form below
+</i></p>
 <br>
 
 <div id="wufoo-zw3j0vr1rkrzdh">
