--- a/faq.html
+++ b/faq.html
@@ -20,10 +20,7 @@ title: FAQs
     <div id="collapse1" class="panel-collapse collapse">
       <div class="panel-body">
         <p>
-          No, a juvenile record is not a criminal conviction, even if you were "found guilty" in juvenile court. In Illinois, you cannot be convicted of a crime in juvenile court, because juvenile court is separate from (adult) criminal court.
-        </p>
-        <p>
-          If a job application asks you about criminal convictions, you should not reveal your juvenile record. If you think a job has seen your juvenile record, contact the Juvenile Expungement Help Desk at 312-229-6359.
+          No, a juvenile record is not a criminal conviction, even if you were “found guilty” in juvenile court.
         </p>
       </div>
     </div>
@@ -35,19 +32,14 @@ title: FAQs
     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q2" href="#collapse2">
       <h4>
         <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
-        After I find out I am eligible to apply for juvenile expungement in Illinois, what do I have to do?
+        If a job application asks you about criminal convictions, you should not reveal your juvenile record.  If you think a job, a college, or a landlord has seen your juvenile record, contact us:
       </h4>
       <div class='clearfix'></div>
     </div>
     <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
         <p>
-          Remember that <a href="{{ site.baseurl }}/legalaid.html">free legal help</a> is available to help you complete the process! Use it! To petition for juvenile expungement, you will need to:
-          <ol>
-            <li> Get a copy of your RAP sheet</li>
-            <li> Fill out a petition form</li>
-            <li> Submit your petition to the appropriate court</li>
-          </ol>
+          <a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a>
         </p>
       </div>
     </div>
