--- a/faq.html
+++ b/faq.html
@@ -38,9 +38,7 @@ title: FAQs
     </div>
     <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
-        <p>
-          <a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a>
-        </p>
+        <p><a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a></p>
       </div>
     </div>
   </div>
@@ -51,13 +49,20 @@ title: FAQs
     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q3" href="#collapse3">
       <h4>
         <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
-        How do I get my RAP sheet?
+        After I find out I am eligible to petition for erasure of my juvenile record in Connecticut, what should I do?
       </h4>
       <div class='clearfix'></div>
     </div>
     <div id="collapse3" class="panel-collapse collapse">
       <div class="panel-body">
-        <p>You can pick it up at the juvenile expungement help desk. <a href="{{ site.baseurl }}/applying.html">Click here for instructions</a>.</p>
+        <p>Remember that free legal help may be available to help you complete the process!</p>
+		<p><a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a></p>
+		<p>If you are not between 18 and 24 or do not live in one of the above-listed areas, you will need to:</P>
+		<ol>
+		<li>Get a copy of your juvenile record from the police department where the incident occurred.</li>
+		<li>Fill out a <a href="http://www.jud.ct.gov/webforms/default.aspx?load_catg=Juvenile#searchTable">petition form</a> (the form "Erasure of Record, Petition/Order ", JD-JM-12 Rev. 10-15, can be found here:<br>
+        <a href="http://www.jud.ct.gov/webforms/default.aspx?load_catg=Juvenile#searchTable" class="btn btn-default">CT Judicial Forms &nbsp;<i class="fa fa-chevron-right"></i></a>
+		<li>Submit your petition to the juvenile court closest to where the incident occurred.</li>
       </div>
     </div>
   </div>
